Updates to tests, configuration and policy files #59